check password on login
